--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -41,7 +41,7 @@ body {
 #header .header-content {
     position: relative;
     z-index: 2;
-    padding: 200px 0;
+    padding: 300px 0 0;
 }
 
 #header .main-title, #header .secondary-title {
@@ -51,9 +51,8 @@ body {
 
 #header .main-title {
     text-transform: uppercase;
-    font-size: 3.5em;
+    font-size: 3.8em;
     letter-spacing: 2px;
-
 }
 
 #header .secondary-title {
@@ -158,7 +157,16 @@ hr {
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
-
+    #header .header-content {
+        padding-top: 160px;
+    }
+    #header .social-icons ul li a {
+        margin-right: 20px;
+        font-size: 2.0em;
+    }
+    #footer .footer-text {
+        padding: 5px 0
+    }
 }
 
 /* Custom, iPhone Retina */
@@ -168,8 +176,10 @@ hr {
 
 @media screen and (max-device-width: 480px) {
 
+
 }
 
 /* iPad */
 @media screen and (min-device-width: 481px) {
+
 }
